--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div id="main">
       <nav>
         <div class="nav-in">
-          <h2>Productivity DashBoard</h2>
+          <h2>
+            <span style="color: royalblue">ZenTask</span> : Productivity
+            DashBoard
+          </h2>
           <div class="theme">
             <h4>Change theme</h4>
           </div>
@@ -19,9 +22,9 @@
       <section class="allElems">
         <header>
           <div class="header1">
-            <h2>20 April 2025</h2>
+            <h2>20 December 2025</h2>
             <h1>Saturday, 1:00 pm</h1>
-            <h4>Bhopal (MP)</h4>
+            <h4>Ranchi (JH)</h4>
           </div>
 
           <div class="header2">
