--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -80,11 +80,17 @@
         <div class="todo-container">
           <div class="addTask">
             <form>
-              <input id="task-input" type="text" placeholder="Enter Task" />
+              <input
+                id="task-input"
+                type="text"
+                placeholder="Enter Task"
+                required
+              />
               <textarea
                 placeholder="Enter Details"
                 name=""
                 id=""
+                required
                 cols="30"
                 rows="10"
               ></textarea>
